--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iradiator-widget-ping",
   "version": "1.0.0",
   "description": "An iradiator-widget to display the result of the ping-plugin.",
+  "main": "build/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,5 +27,18 @@
     "iradiator": "0",
     "iradiator-plugin-ping": "1"
   },
-  "homepage": "https://github.com/pigulla/iradiator-widget-ping#readme"
+  "homepage": "https://github.com/pigulla/iradiator-widget-ping#readme",
+  "dependencies": {
+    "babel-core": "6.7.5",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
+    "webpack": "1.12.14"
+  },
+  "externalWebpackDependencies": [
+    "react",
+    "react-immutable-proptypes",
+    "immutable"
+  ]
 }
