--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An iradiator-widget to display the result of the ping-plugin.",
   "main": "build/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "keywords": [
     "iradiator",
@@ -28,7 +28,7 @@
     "iradiator-plugin-ping": "1"
   },
   "homepage": "https://github.com/pigulla/iradiator-widget-ping#readme",
-  "dependencies": {
+  "devDependencies": {
     "babel-core": "6.7.5",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
