--- a/package.json
+++ b/package.json
@@ -24,13 +24,5 @@
     "iradiator": "0",
     "iradiator-plugin-ping": "1"
   },
-  "homepage": "https://github.com/pigulla/iradiator-widget-ping#readme",
-  "devDependencies": {
-    "babel-core": "6.7.5",
-    "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-0": "6.5.0",
-    "webpack": "1.12.14"
-  }
+  "homepage": "https://github.com/pigulla/iradiator-widget-ping#readme"
 }
